Added the initial ClutchAnnouncePlugin

--- a/ClutchAnnouncePlugin.csproj
+++ b/ClutchAnnouncePlugin.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <RootNamespace>TemplatePlugin</RootNamespace>
+    <RootNamespace>ClutchAnnouncePlugin</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
