--- a/ClutchAnnouncePlugin.csproj
+++ b/ClutchAnnouncePlugin.csproj
@@ -3,16 +3,10 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <RootNamespace>ClutchAnnouncePlugin</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-      <Reference Include="CounterStrikeSharp.API">
-         <HintPath>.\CounterStrikeSharp\addons\counterstrikesharp\api\CounterStrikeSharp.API.dll</HintPath>
-      </Reference>
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="CounterStrikeSharp.API" Version="1.0.159" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
   </ItemGroup>
 </Project>
